--- a/public/css/admin/style.css
+++ b/public/css/admin/style.css
@@ -8,6 +8,7 @@
    scrollbar-base-color:#D7DCE0;
    scrollbar-track-color:#;
 }
+table td span{word-wrap:break-word;}
 html{height:100%;}
 body{padding:5px;margin:0;font-family:"宋体",Arial Narrow,Arial,serif;background:#ffffff;font-size:12px; height:100%;}
 div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,blockquote,p{padding:0; margin:0;}
